--- a/_posts/2020-7-11-渗透测试学习记录.md
+++ b/_posts/2020-7-11-渗透测试学习记录.md
@@ -1,5 +1,5 @@
 ---
-title: Markdown语法学习
+title: 渗透测试学习记录
 date: 2020-07-11 22:29:30 +0800
 categories: [Subject, Penetration]
 tags: [penetration]     # TAG names should always be lowercase 
