--- a/_posts/2020-06-02-解决github访问加载慢的问题.md
+++ b/_posts/2020-06-02-解决github访问加载慢的问题.md
@@ -12,15 +12,19 @@ tags: [github]
 
  - ### 第一步 - 获取Github网站相关的IP
     - 获取网站：https://www.ipaddress.com/，
-    找到**IP Lookup**工具，获取以下两个网址的**ip**
+    找到**IP Lookup**工具，获取以下三个域名的**ip**
             
             -1- 
-            - http://github.global.ssl.fastly.net
+            - github.global.ssl.fastly.net
             - IP：199.232.69.194
 
             -2-
-            - http://github.com
+            - github.com
             - IP: 140.82.112.4
+
+            -3-
+            - raw.githubusercontent.com
+            - IP：199.232.68.133
 
 ---
   
@@ -28,10 +32,13 @@ tags: [github]
     - 文件路径：
     - C:\Windows\System32\drivers\etc\hosts
     - 添加以下内容：
-    
+    ```
+
             140.82.112.3    github.com
             199.232.69.194  github.global.ssl.fastly.net
+            199.232.68.133  raw.githubusercontent.com
 
+    ```    
 ---
   
 - ### 第三步 - 测试
