--- a/_posts/2020-05-28-关于Github构建博客的问题及解决方案(持续更新).md
+++ b/_posts/2020-05-28-关于Github构建博客的问题及解决方案(持续更新).md
@@ -5,5 +5,9 @@ categories: [Solution,github]
 tags: [github]
 ---
 
-##  采用 Github Pages + Jekyll 
+##  采用 Github Pages + Jekyll+[chirpy](https://chirpy.cotes.info/posts/write-a-new-post/)
+
+---
 ### 防踩坑指南 
+本主题catagories及tags问题
+ 0.1 
