--- a/_posts/2020-05-28-关于Github构建博客的问题及解决方案(持续更新).md
+++ b/_posts/2020-05-28-关于Github构建博客的问题及解决方案(持续更新).md
@@ -1,7 +1,7 @@
 ---
 title: 关于Github构建博客的问题及解决方案(持续更新)
 date: 2020-05-28 10:50:00 +0800
-categories: [Solution,github]
+categories: [Solution,Github]
 tags: [github]
 ---
 
