--- a/_posts/2020-05-30-Markdown语法学习.md
+++ b/_posts/2020-05-30-Markdown语法学习.md
@@ -1,7 +1,7 @@
 ---
 title: Markdown语法学习
 date: 2020-05-30 21:58:30 +0800
-categories: [Markdown, basic]
+categories: [Subjects, markdown]
 tags: [markdown]     # TAG names should always be lowercase 
 ---
 
