--- a/_posts/2020-06-02-解决github访问加载慢的问题.md
+++ b/_posts/2020-06-02-解决github访问加载慢的问题.md
@@ -1,7 +1,7 @@
 ---
 title: 解决github访问加载慢的问题
 date: 2020-06-02 10:50:00 +0800
-categories: [Solution,github]
+categories: [Subjects,github]
 tags: [github]
 ---
 
