--- a/_posts/2020-06-04-Python环境部署.md
+++ b/_posts/2020-06-04-Python环境部署.md
@@ -1,7 +1,7 @@
 ---
 title: Python环境部署
 date: 2020-06-04 22:50:00 +0800
-categories: [Python,setup]
+categories: [Subjects,python]
 tags: [python]
 ---
 
