--- a/_posts/2020-07-14-渗透测试编程(Python).md
+++ b/_posts/2020-07-14-渗透测试编程(Python).md
@@ -5,4 +5,4 @@ categories: [Subjects, penetration]
 tags: [penetration]    # TAG names should always be lowercase 
 ---
 
-## 端口扫描工具(Scan port tools)
+## [端口扫描工具(Scan port tools)](../hack-python/port-scan.md)
