--- a/_posts/2020-05-28-关于Github构建博客的问题及解决方案(持续更新).md
+++ b/_posts/2020-05-28-关于Github构建博客的问题及解决方案(持续更新).md
@@ -3,6 +3,7 @@ title: 关于Github构建博客的问题及解决方案(持续更新)
 date: 2020-05-28 10:50:00 +0800
 categories: [Subjects,github]
 tags: [github]
+hide: false
 ---
 
 ##  采用 Github Pages + Jekyll+[chirpy](https://chirpy.cotes.info/posts/write-a-new-post/)
