--- a/_posts/2020-06-04-Python基础.md
+++ b/_posts/2020-06-04-Python基础.md
@@ -1,11 +1,11 @@
 ---
-title: Python环境部署
+title: Python基础
 date: 2020-06-04 22:50:00 +0800
 categories: [Subjects,python]
 tags: [python]
 hide: false
 ---
 
-## Python环境部署
+## Python基础
 
 
