--- a/_posts/2020-07-14-渗透测试编程(Python).md
+++ b/_posts/2020-07-14-渗透测试编程(Python).md
@@ -3,7 +3,7 @@ title: 渗透测试编程(Python)
 date: 2020-07-14 14:29:30 +0800
 categories: [Subjects, penetration]
 tags: [penetration]    # TAG names should always be lowercase 
-hide: false
+hide: true
 ---
 
 ## [端口扫描工具(Scan port tools)]({% post_url /hack-python/2020-07-14-port-scan %})
