--- a/_posts/2020-06-04-Python常用库(持续更新).md
+++ b/_posts/2020-06-04-Python常用库(持续更新).md
@@ -67,10 +67,9 @@ hide: false
 |mayavi   |方便实用的可视化软件   |
 
 #### 7.用户图形界面
-<table>
-| 模块     | 说明   |   
-|  ----    | ----  |
-|PyQt5   |成熟的商业级GUI第三方库   |
-|wxpython  |优秀的GUI图形库   |
-|pygtk   |轻松创建具有图形用户界面程序的第三方库   |
-</table>
+
+ 模块     | 说明     
+  ----    | ----  
+PyQt5   |成熟的商业级GUI第三方库  
+wxpython  |优秀的GUI图形库  
+pygtk   |轻松创建具有图形用户界面程序的第三方库  
