--- a/_posts/2020-05-28-关于Github构建博客的问题及解决方案(持续更新).md
+++ b/_posts/2020-05-28-关于Github构建博客的问题及解决方案(持续更新).md
@@ -27,5 +27,8 @@ hide: false
      1. 注意在md文件中，生成表格时，去掉两侧 “|”
      2. 主要与上下标题或内容用行隔开
 
+- 使用emoji表情直接复制即可
+
+
 <font color=red> 代码错误无法上传，待更新  </font>
 $\color{red}{红色字}$
