--- a/_posts/2020-05-30-Markdown语法学习.md
+++ b/_posts/2020-05-30-Markdown语法学习.md
@@ -9,7 +9,9 @@ hide: false
 
 ## **Markdown 语法学习** ##
 
-:smile: `this very good `❤️
+[emoji地址](https://github.com/ikatyang/emoji-cheat-sheet/blob/master/README.md#smileys--emotion)
+
+:smile: `this very good `❤️😀🙂
 
 ---
 
