--- a/_posts/2020-07-11-渗透测试学习笔记(持续更新).md
+++ b/_posts/2020-07-11-渗透测试学习笔记(持续更新).md
@@ -1,5 +1,5 @@
 ---
-title: 渗透测试学习记录
+title: 渗透测试学习笔记(持续更新)
 date: 2020-07-11 22:29:30 +0800
 categories: [Subjects, penetration]
 tags: [penetration]     # TAG names should always be lowercase 
@@ -7,8 +7,6 @@ hide: false
 ---
 
 
-
-## **渗透学习记录 （持续更新）**
 
 
 ---
@@ -24,8 +22,10 @@ hide: false
 
 
 ##  目录树
-    - 第0节 - 渗透测试导论
-        - 0.1 - 明确需求阶段
+Tree | GO
+---- | ----
+    - 第0节 - 渗透测试导论 
+        - 0.1 - 明确需求阶段 
         - 0.2 - 信息收集阶段
         - 0.3 - 威胁建模阶段
         - 0.4 - 漏洞分析阶段
