--- a/_posts/2020-07-11-渗透测试学习笔记(持续更新).md
+++ b/_posts/2020-07-11-渗透测试学习笔记(持续更新).md
@@ -34,7 +34,7 @@ hide: false
         - 1.1 Windows 环境下
         - 1.2 Kali 
     - 第2节 - 渗透攻击方法与技巧
-        - 2.1 流量捕获 [GO](http://www.baidu.com)
+        - 2.1 流量捕获
         - 2.2 漏洞利用
         - 2.3 密码攻击
         - 2.4 客户端攻击
