--- a/_posts/2020-06-04-Python常用库(持续更新).md
+++ b/_posts/2020-06-04-Python常用库(持续更新).md
@@ -25,7 +25,7 @@ hide: false
 
  模块     | 说明     
   ----    | ----    
-  requests |[处理http请求的第三方库](http://www.baidu.com)       
+  requests |处理http请求的第三方库       
   scrapy   |快速、高层次的web获取框架     
 
 <br>
