--- a/_posts/2020-05-30-Markdown语法学习.md
+++ b/_posts/2020-05-30-Markdown语法学习.md
@@ -13,9 +13,47 @@ hide: false
 
 :smile: `this very good `❤️😀🙂
 
+#### 使用emoji表情直接复制即可
+
+
+😀😁😂😃😄😅😆😉😊😋😎😍😘😗😙😚😇😐
+😑😶😏😣😥😮😯😪😫😴😌😛😜😝😒😓😔😕😲
+😷😖😞😟😤😢😭😦😧😨😬😰😱😳😵😡😠🌹🍀🍎
+💰📱🌙🍁🍂🍃🌷💎🔪🔫🏀⚽⚡👄👍🔥👦👧👨👩👴
+👵👶👱👮👲👳👷👸💂🎅👰👼💆💇🙍🙎🙅🙆💁🙋🙇
+🙌🙏👤👥🚶🏃👯💃👫👬👭💏💑👪💪👈👉☝👆👇✌✋
+👌👍👎✊👊👋👏👐✍👣👀👂👃👅👄💋👓👔👕👖👗👘
+👙👚👛👜👝🎒💼👞👟👠👡👢👑👒🎩🎓💄💅💍🌂
+📱📲📶📳📴☎📞📟📠🙈🙉🙊🐵🐒🐶🐕🐩🐺🐱😺😸
+😹😻😼😽🙀😿😾🐈🐯🐅🐆🐴🐎🐮🐂🐃🐄🐷🐖🐗
+🐽🐏🐑🐐🐪🐫🐘🐭🐁🐀🐹🐰🐇🐻🐨🐼🐾🐔🐓🦆
+🦢🕊🦜🦉🐣🐤🐥🐦🐧🐸🐊🐢🐍🐲🐉🐳🐋🐬🐟🐠🐡
+🐙🐚🐌🐛🐜🐝🐞🦋💐🌸💮🌹🌺🌻🌼🌷🌱🌲🌳🌴🌵🌾
+🌿🍀🍁🍂🍃🌍🌎🌏🌐🌑🌒🌓🌔🌕🌖🌗🌘🌙🌚🌛🌜
+☀🌝🌞⭐🌟🌠☁⛅☔⚡❄🔥💧🌊♠♥♦♣🀄🎴🔇🔈🔉🔊📢📣
+💤💢💬💭♨🌀🔔🔕✡✝🔯📛🔰🔱⭕✅☑✔✖❌❎➕➖➗
+➰➿〽✳✴❇‼⁉❓❔❕❗©®™🎦🔅🔆💯🔠🔡🔢🔣🔤🅰🆎🅱
+🆑🆒🆓ℹ🆔Ⓜ🆕🆖🅾🆗🅿🆘🆙🆚🈁🈂🈷🈶🈯🉐🈹🈚🈲
+🉑🈸🈴🈳㊗㊙🈺🈵▪▫◻◼◽◾⬛⬜🔶🔷🔸🔹🔺🔻💠🔲🔳⚪
+⚫🔴🔵⬆↗➡↘⬇↙⬅↖↕↔↩↪⤴⤵
+
+📱📲☎📞📟📠🔋🔌💻💽💾💿📀🎥📺📷📹📼🔍🔎🔬🔭📡📔
+📕📖📗📘📙📚📓📃📜📄📰📑🔖💳✉📧📨📩📤📥📦📫📪📬
+📭📮✏✒📝📁📂📅📆📇📈📉📊📋📌📍📎📏📐✂🔒🔓🔏🔐🔑
+
+🚂🚃🚄🚅🚆🚇🚈🚉🚊🚝🚞🚋🚌🚍🚎🚏🚐🚑🚒🚓🚔🚕🚖
+🚗🚘🚚🚛🚜🚲⛽🚨🚥🚦🚧⚓⛵🚣🚤🚢✈💺🚁🚟🚠🚡🚀
+
+💌💎🔪💈🚪🚽🚿🛁⌛⏳⌚⏰🎈🎉🎊🎎🎏🎐🎀🎁📯📻📱📲☎📞
+📟📠🔋🔌💻💽💾💿📀🎥📺📷📹📼🔍🔎🔬🔭📡💡🔦🏮📔📕📖
+📗📘📙📚📓📃📜📄📰📑🔖💰💴💵💶💷💸💳✉📧📨📩📤📥📦
+📫📪📬📭📮✏✒📝📁📂📅📆📇📈📉📊📋📌📍📎📏📐✂🔒🔓🔏🔐
+🔑🔨🔫🔧🔩🔗💉💊🚬🔮🚩🎌💦💨
+
+
 ---
 
-二次公式
+#### 二次公式
 
 
 $$\sum_{i=0}^N\int_{a}^{b}g(t,i)\text{d}t$$
@@ -31,7 +69,7 @@ $$\sum_{i=0}^N\int_{a}^{b}g(t,i)\text{d}t$$
 
 ---
 
-代码区域：
+#### 代码区域：
 
 ```
 print "hello world~!"
