--- a/_posts/2020-05-28-关于Github构建博客的问题及解决方案(持续更新).md
+++ b/_posts/2020-05-28-关于Github构建博客的问题及解决方案(持续更新).md
@@ -33,6 +33,21 @@ hide: false
 
 <br>
 
+#### 网页DIY位置定位记录
+
+```
+1.Sidebar 背景色位置记录：
+     路径：assets/css/_colors/light-typography.css
+     搜索：Sidebar 
+     原有背景色已记录
+
+2.Sidebar-link 选定前字体色
+     路径：assets/css/_addon/module.scss
+     搜索：sidebar-links 将($color:此处为新颜色值)修改
+
+
+
+```
 
 
 #### Test record:
