--- a/_posts/2020-05-28-关于Github构建博客的问题及解决方案(持续更新).md
+++ b/_posts/2020-05-28-关于Github构建博客的问题及解决方案(持续更新).md
@@ -36,7 +36,7 @@ hide: false
 #### 网页DIY位置定位记录
 
 ```
-1.Sidebar 背景色位置记录：
+1.Sidebar 背景色
      路径：assets/css/_colors/light-typography.css
      搜索：Sidebar 
      原有背景色已记录
@@ -45,6 +45,9 @@ hide: false
      路径：assets/css/_addon/module.scss
      搜索：sidebar-links 将($color:此处为新颜色值)修改
 
+3.subtitle 二级标题
+     路径：assets/css/_addon/main.scss
+     搜索：site-subtitle 修改color的值
 
 
 ```
