--- a/_posts/2020-05-28-关于Github构建博客的问题及解决方案(持续更新).md
+++ b/_posts/2020-05-28-关于Github构建博客的问题及解决方案(持续更新).md
@@ -49,7 +49,7 @@ hide: false
      路径：assets/css/_addon/main.scss
      搜索：site-subtitle 修改color的值
 
-4.Sidebar active 背景色
+4.Sidebar active 已选定背景色
      路径：assets/css/_addon/main.scss
      搜索：nav-item 下active->nav-link->color的值
 
