--- a/_posts/2020-05-28-关于Github构建博客的问题及解决方案(持续更新).md
+++ b/_posts/2020-05-28-关于Github构建博客的问题及解决方案(持续更新).md
@@ -57,6 +57,8 @@ hide: false
      路径：assets/css/_addon/main.scss
      搜索：nav-item 下hover->nav-link->color的值
 
+6.Sidebar hover 光标放置颜色均已换成黑色
+
 
 ```
 
