--- a/_posts/2020-05-28-关于Github构建博客的问题及解决方案(持续更新).md
+++ b/_posts/2020-05-28-关于Github构建博客的问题及解决方案(持续更新).md
@@ -9,6 +9,40 @@ hide: false
 ##  采用 Github Pages + Jekyll+[chirpy](https://chirpy.cotes.info/posts/write-a-new-post/)
 
 
+### <font color = red > 添加新的分类（catagories）和标签 （tags）</font> 
+#### <font color = green > 注：此操作仅为添加分类和标签，具体将文章划分到什么位置，由md文件的头部信息决定</font>
+
+- 1.在categories目录下新建<font color = yellow> *<catagory_name>*.html </font>,并添加以下内容：
+
+```
+---
+layout: category
+title: <name>
+category: <name>
+---
+
+以上部分分类名称“name”需一致，小写为二级目录，大写为一级目录
+
+```
+
+- 2.在tags目录下新建<font color = yellow> *<tag_name>*.html </font>,并添加以下内容：
+
+```
+
+---
+layout: tag
+title: <Tag_name>   # 大小写均可
+tag: <tag_name>        # 小写
+---
+
+
+```
+
+
+
+
+---
+
 #### 如何对post的文章进行隐藏?
 
 ```Python
