--- a/_posts/2020-06-09-LPAD.md
+++ b/_posts/2020-06-09-LPAD.md
@@ -9,16 +9,16 @@ hide: false
 
 특정값의 앞자리에 특정 숫자나 문자를 채워야 할 때 사용합니다.
 
-RPAD 와 LPAD는 서로 반대로 출력이므로 LPAD 만 설명 합니다. 
+RPAD 와 LPAD는 서로 반대로 출력이므로 LPAD 만 설명 합니다.
 
  <!--more-->
- 
+
 ```sql
 WITH BOARD AS (
     SELECT 1 BOARD_NUM,SYSDATE REGDATE, '안녕하세요.' TITLE, '인사드립니다. 웅덩이에 빠졌습니다.' CONTENT FROM DUAL
 )
 
-SELECT 
+SELECT
      BOARD_NUM
      , REGDATE
      , TITLE
@@ -27,22 +27,22 @@ SELECT
   FROM BOARD;
 ```
 
-![LPAD 추가 전 이미지]({{ "/assets/img/pexels/LPAD-01.jpg" | relative_url }})
+![LPAD 추가 전 이미지]({{ "/assets/img/bloging/sql/LPAD-01.jpg" | relative_url }})
 
  LPAD 추가 전
- 
+
  ```sql
- SELECT 
+ SELECT
     TO_CHAR(REGDATE,'YYMMDD') || LPAD(BOARD_NUM,5,0) BOARD_ID
      , BOARD_NUM
      , REGDATE
      , TITLE
      , CONTENT
-    -- , LPAD(DEPTNO, 5, 'A') --4
+    -- , LPAD(DEPTNO, 5, 'A') --
   FROM BOARD;
  ```
- 
-![LPAD 추가 후 이미지]({{ "/assets/img/pexels/LPAD-02.jpg" | relative_url }})
+
+![LPAD 추가 후 이미지]({{ "/assets/img/bloging/sql/LPAD-02.jpg" | relative_url }})
 
 LPAD 추가 후
 
@@ -58,9 +58,8 @@ LPAD는 값을 받을 인자가 두가지로 나뉜다.
   SELECT LPAD('-',5) A, LPAD('-',6,'1') B  FROM DUAL;
 ```
 
-![최종설명 ]({{ "/assets/img/pexels/LPAD-03.jpg" | relative_url }})
+![최종설명 ]({{ "/assets/img/bloging/sql/LPAD-03.jpg" | relative_url }})
 
 A : 5번째자리에 -를 넣겠다(쉬운 이해를 위해 공백을 드래그했음 저공백이 앞에 4개가있음을 의미)
 
 B : 총 6자리중에 -값을 넣고 앞에 1로 채우겠다.
-
