--- a/_posts/2020-11-22-Express.md
+++ b/_posts/2020-11-22-Express.md
@@ -65,7 +65,7 @@ my_react> npm install -g concurrently
 이전에 다운받았던 `module` 의 버전을 확인하려면  
 
 ```terminal
-my_react> **npm show body-parser**
+my_react> npm show body-parser
 body-parser@1.19.0 | MIT | deps: 10 | versions: 65
 Node.js body parsing middleware
 https://github.com/expressjs/body-parser#readme
