--- a/_posts/2021/2021-03-04-Java_JVM02.md
+++ b/_posts/2021/2021-03-04-Java_JVM02.md
@@ -15,8 +15,8 @@ Runtime Data Area의 Heap area(힙 영역) 에대해 알아보자.
 
 
 ![JVM Heap]({{ "/assets/img/bloging/java/jvm_heap.png" | relative_url }})  
-  
-### Heap Area Structure  
+
+## Heap Area Structure  
 
 힙 영역은 다음의 영역들로 구성됩니다.
 1. Young Generation  
