--- a/_posts/2021/2021-03-02-Java_JVM01.md
+++ b/_posts/2021/2021-03-02-Java_JVM01.md
@@ -69,7 +69,7 @@ hide: false
 
 > static 변수는 Methtod Area의 Class Variable에 저장되며, 기본형이 아닌 static 클래스형 변수는 레퍼런스 변수만 저장되고 실제 인스턴스는 Heap에 저장된다. 그 후 인스턴스의 변수를 저장하기 위해 Heap에 메모리 확보가 되고 Heap의 인스턴스가 Method Area의 어느 클래스와 연결되는지 설정한다.  
 
-### Heap area    
+### [Heap area](https://kimchi-dev.github.io/posts/Java_JVM02/#heap-area)  
 [**이전 화면**](javascript:history.back())
 객체가 동적으로 생성될 때 Heap영역으로 메모리를 할당 받는다. new 키워드로 생성된 객체 또는 배열이 할당된다. Method 영역에 로드된 클래스만 생성이 가능하고 Garbage Collector가 unreachable 객체를 제거하여 메모리를 관리하는 영역이다.  
 
