--- a/_posts/2021/2021-03-02-Java_JVM01.md
+++ b/_posts/2021/2021-03-02-Java_JVM01.md
@@ -14,6 +14,8 @@ hide: false
 
 자바의 런타임 메모리 구조는 크게 5가지 요소로 구성 되어있다.  
 
+![JVM]({{ "/assets/img/bloging/java/jvm01.png" | relative_url }})  
+
 ### 1. Method area   
 [**이전 화면**](javascript:history.back())
  - `클래스 객체 변수명,자료형,접근제어자 ...`  
