--- a/_posts/2021/2021-03-08-Java_JVM03.md
+++ b/_posts/2021/2021-03-08-Java_JVM03.md
@@ -7,9 +7,7 @@ date: 2021-03-09 13:38:00 +0900
 excerpt_separator: <!--more-->
 hide: false
 ---
-JVM  
-  └-Runtime Data Area  
-     └- Stack  
+JVM > Runtime Data Area > Stack  
 <!--more-->
 
 JVM 에 Rumtime Data Area, Stack에 대하여 알아보자.
