--- a/_posts/2021/2021-03-08-Java_JVM03.md
+++ b/_posts/2021/2021-03-08-Java_JVM03.md
@@ -6,6 +6,7 @@ tags: [Java]
 date: 2021-03-09 13:38:00 +0900
 excerpt_separator: <!--more-->
 hide: false
+thumbnail: "/assets/img/bloging/java/jvm_stack.png"
 ---
 JVM > Runtime Data Area > Stack  
 <!--more-->
