--- a/tags/단위-테스트.md
+++ b/tags/단위-테스트.md
@@ -1,5 +1,5 @@
 ---
 layout: tag
-title: 단위-테스트     # TAG names should always be lowercase
-tag: 단위-테스트     # TAG names should always be lowercase
+title: 단위 테스트     # TAG names should always be lowercase
+tag: 단위 테스트     # TAG names should always be lowercase
 ---
