--- a/tags/테스트-파라미터.md
+++ b/tags/테스트-파라미터.md
@@ -1,5 +1,5 @@
 ---
 layout: tag
-title: test-parameter    # TAG names should always be lowercase
-tag: test-parameter     # TAG names should always be lowercase
+title: 테스트 파라미터    # TAG names should always be lowercase
+tag: 테스트 파라미터    # TAG names should always be lowercase
 ---
